tests/format/misc/errors/typescript/declare-setter.ts
class Foo {
  declare set foo(v)
}
